Implement functionality to support Non-Vec SIMD filter query